styles/bubble.css
/* Bubble animation taken from http://jsfiddle.net/p5gpx/ with modifications */

html,
body,
#bubbles {
  height: 100%
}

body {
  overflow: hidden;
  font-family: 'Meddon', cursive;
  font-weight: 400;
  background-color: 20634a;
}

#bubbles {
  display: flex;
  flex-flow: column nowrap;
  justify-content: center;
  align-items: center;
  position: relative;
  height: 100vh;
  text-align: center;
}

h1.title {
  color: a29061;
}

h3.subtitle {
  color: bec9c1;
}

.bubble {
  width: 60px;
  height: 60px;
  background: #9aaca1;
  -webkit-border-radius: 200px;
  -moz-border-radius: 200px;
  border-radius: 200px;
  position: absolute;
}

.x1 {
  left: 20%;
  -webkit-transform: scale(0.9);
  -moz-transform: scale(0.9);
  transform: scale(0.9);
  opacity: 0.2;
  -webkit-animation: moveclouds 15s linear infinite, sideWays 4s ease-in-out infinite alternate;
  -moz-animation: moveclouds 15s linear infinite, sideWays 4s ease-in-out infinite alternate;
  -o-animation: moveclouds 15s linear infinite, sideWays 4s ease-in-out infinite alternate;
  animation: moveclouds 15s linear infinite, sideWays 4s ease-in-out infinite alternate;
}

.x2 {
  left: 40%;
  -webkit-transform: scale(0.6);
  -moz-transform: scale(0.6);
  transform: scale(0.6);
  opacity: 0.5;
  -webkit-animation: moveclouds 25s linear infinite, sideWays 5s ease-in-out infinite alternate;
  -moz-animation: moveclouds 25s linear infinite, sideWays 5s ease-in-out infinite alternate;
  -o-animation: moveclouds 25s linear infinite, sideWays 5s ease-in-out infinite alternate;
  animation: moveclouds 25s linear infinite, sideWays 5s ease-in-out infinite alternate;
}

.x3 {
  left: 50%;
  -webkit-transform: scale(0.8);
  -moz-transform: scale(0.8);
  transform: scale(0.8);
  opacity: 0.3;
  -webkit-animation: moveclouds 20s linear infinite, sideWays 4s ease-in-out infinite alternate;
  -moz-animation: moveclouds 20s linear infinite, sideWays 4s ease-in-out infinite alternate;
  -o-animation: moveclouds 20s linear infinite, sideWays 4s ease-in-out infinite alternate;
  animation: moveclouds 20s linear infinite, sideWays 4s ease-in-out infinite alternate;
}

.x4 {
  left: 60%;
  -webkit-transform: scale(0.75);
  -moz-transform: scale(0.75);
  transform: scale(0.75);
  opacity: 0.35;
  -webkit-animation: moveclouds 18s linear infinite, sideWays 2s ease-in-out infinite alternate;
  -moz-animation: moveclouds 18s linear infinite, sideWays 2s ease-in-out infinite alternate;
  -o-animation: moveclouds 18s linear infinite, sideWays 2s ease-in-out infinite alternate;
  animation: moveclouds 18s linear infinite, sideWays 2s ease-in-out infinite alternate;
}

.x5 {
  left: 70%;
  -webkit-transform: scale(0.8);
  -moz-transform: scale(0.8);
  transform: scale(0.8);
  opacity: 0.3;
  -webkit-animation: moveclouds 7s linear infinite, sideWays 1s ease-in-out infinite alternate;
  -moz-animation: moveclouds 7s linear infinite, sideWays 1s ease-in-out infinite alternate;
  -o-animation: moveclouds 7s linear infinite, sideWays 1s ease-in-out infinite alternate;
  animation: moveclouds 7s linear infinite, sideWays 1s ease-in-out infinite alternate;
}

@-webkit-keyframes moveclouds {
  0% {
      top: 100%;
  }
  100% {
      top: -20%;
  }
}

@-webkit-keyframes sideWays {
  0% {
      margin-left:0px;
  }
  100% {
      margin-left:50px;
  }
}

@-moz-keyframes moveclouds {
  0% {
      top: 100%;
  }

  100% {
      top: -20%;
  }
}

@-moz-keyframes sideWays {
  0% {
      margin-left:0px;
  }
  100% {
      margin-left:50px;
  }
}

@-o-keyframes moveclouds {
  0% {
      top: 100%;
  }
  100% {
      top: -20%;
  }
}

@-o-keyframes sideWays {
  0% {
      margin-left:0px;
  }
  100% {
      margin-left:50px;
  }
}

@keyframes moveclouds {
  0% {
      top: 100%;
  }
  100% {
      top: -20%;
  }
}

@keyframes sideWays {
  0% {
      margin-left:0px;
  }
  100% {
      margin-left:50px;
  }
}

